k8s/microservice1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  selector:
    app: microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
